--- a/org.osgi.test.cases.webcontainer.optional/resources/tw3/WEB-INF/web.xml
+++ b/org.osgi.test.cases.webcontainer.optional/resources/tw3/WEB-INF/web.xml
@@ -26,7 +26,7 @@
 		<description></description>
 		<display-name>TestFilter</display-name>
 		<filter-name>TestFilter</filter-name>
-		<filter-class>org.osgi.test.cases.webcontainer.tw2.TestFilter</filter-class>
+		<filter-class>org.osgi.test.cases.webcontainer.optional.tw2.TestFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>TestFilter</filter-name>
@@ -35,34 +35,34 @@
 
 	<listener>
 		<listener-class>
-			org.osgi.test.cases.webcontainer.tw2.TestServletContextListener</listener-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.TestServletContextListener</listener-class>
 	</listener>
 	<listener>
 		<listener-class>
-			org.osgi.test.cases.webcontainer.tw2.TestServletContextAttributeListener</listener-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.TestServletContextAttributeListener</listener-class>
 	</listener>
 	<listener>
 		<listener-class>
-			org.osgi.test.cases.webcontainer.tw2.TestServletRequestListener</listener-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.TestServletRequestListener</listener-class>
 	</listener>
 	<listener>
 		<listener-class>
-			org.osgi.test.cases.webcontainer.tw2.TestServletRequestAttributeListener</listener-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.TestServletRequestAttributeListener</listener-class>
 	</listener>
 	<listener>
 		<listener-class>
-			org.osgi.test.cases.webcontainer.tw2.TestHttpSessionListener</listener-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.TestHttpSessionListener</listener-class>
 	</listener>
 	<listener>
 		<listener-class>
-			org.osgi.test.cases.webcontainer.tw2.TestHttpSessionAttributeListener</listener-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.TestHttpSessionAttributeListener</listener-class>
 	</listener>
 	<servlet>
 		<description></description>
 		<display-name>PostConstructPreDestroyServlet1</display-name>
 		<servlet-name>PostConstructPreDestroyServlet1</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.PostConstructPreDestroyServlet1</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.PostConstructPreDestroyServlet1</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>PostConstructPreDestroyServlet1</servlet-name>
@@ -73,7 +73,7 @@
 		<display-name>PostConstructPreDestroyServlet2</display-name>
 		<servlet-name>PostConstructPreDestroyServlet2</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.PostConstructPreDestroyServlet2</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.PostConstructPreDestroyServlet2</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>PostConstructPreDestroyServlet2</servlet-name>
@@ -84,7 +84,7 @@
 		<display-name>PostConstructPreDestroyServlet3</display-name>
 		<servlet-name>PostConstructPreDestroyServlet3</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.PostConstructPreDestroyServlet3</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.PostConstructPreDestroyServlet3</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>PostConstructPreDestroyServlet3</servlet-name>
@@ -95,7 +95,7 @@
 		<display-name>ResourceServlet1</display-name>
 		<servlet-name>ResourceServlet1</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.ResourceServlet1</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.ResourceServlet1</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ResourceServlet1</servlet-name>
@@ -106,7 +106,7 @@
 		<display-name>ResourceServlet2</display-name>
 		<servlet-name>ResourceServlet2</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.ResourceServlet2</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.ResourceServlet2</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ResourceServlet2</servlet-name>
@@ -117,7 +117,7 @@
 		<display-name>ResourceServlet3</display-name>
 		<servlet-name>ResourceServlet3</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.ResourceServlet3</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.ResourceServlet3</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ResourceServlet3</servlet-name>
@@ -128,7 +128,7 @@
 		<display-name>ResourceServlet4</display-name>
 		<servlet-name>ResourceServlet4</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.ResourceServlet4</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.ResourceServlet4</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ResourceServlet4</servlet-name>
@@ -174,7 +174,7 @@
 		<display-name>ServletContextListenerServlet</display-name>
 		<servlet-name>ServletContextListenerServlet</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.ServletContextListenerServlet</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.ServletContextListenerServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ServletContextListenerServlet</servlet-name>
@@ -185,7 +185,7 @@
 		<display-name>SecurityTestServlet</display-name>
 		<servlet-name>SecurityTestServlet</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.SecurityTestServlet</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.SecurityTestServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>SecurityTestServlet</servlet-name>
@@ -196,7 +196,7 @@
 		<display-name>RequestListenerServlet</display-name>
 		<servlet-name>RequestListenerServlet</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.RequestListenerServlet</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.RequestListenerServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>RequestListenerServlet</servlet-name>
@@ -207,7 +207,7 @@
 		<display-name>HTTPSessionListenerServlet</display-name>
 		<servlet-name>HTTPSessionListenerServlet</servlet-name>
 		<servlet-class>
-			org.osgi.test.cases.webcontainer.tw2.servlet.HTTPSessionListenerServlet</servlet-class>
+			org.osgi.test.cases.webcontainer.optional.tw2.servlet.HTTPSessionListenerServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>HTTPSessionListenerServlet</servlet-name>
