JPA CT:  Add a test to verify no entityManagerFactory is registered when an incomplete persistence unit is detected

--- a/org.osgi.test.cases.jpa/.project
+++ b/org.osgi.test.cases.jpa/.project
@@ -3,6 +3,7 @@
 	<name>org.osgi.test.cases.jpa</name>
 	<comment></comment>
 	<projects>
+		<project>org.eclipse.gemini.jpa</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
