--- a/org.osgi.test.cases.remoteserviceadmin/.settings/org.eclipse.jdt.core.prefs
+++ b/org.osgi.test.cases.remoteserviceadmin/.settings/org.eclipse.jdt.core.prefs
@@ -1,7 +1,7 @@
 #Sun Apr 04 14:31:45 PDT 2010
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=jsr14
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
 org.eclipse.jdt.core.compiler.compliance=1.5
 org.eclipse.jdt.core.compiler.debug.lineNumber=generate
